--- a/Indexing/MTMainWindowController.xib
+++ b/Indexing/MTMainWindowController.xib
@@ -86,7 +86,6 @@
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{30, 14}, {96, 22}}</string>
 								<reference key="NSSuperview"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="NSEnabled">YES</bool>
@@ -307,7 +306,6 @@
 											<array class="NSMutableArray" key="NSSubviews"/>
 											<string key="NSFrameSize">{148, 333}</string>
 											<reference key="NSSuperview" ref="485556613"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="924329590"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -410,7 +408,6 @@
 									</array>
 									<string key="NSFrame">{{1, 1}, {148, 333}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="682978220"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="682978220"/>
@@ -422,7 +419,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="966985489"/>
 									<string key="NSReuseIdentifierKey">_NS:15</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -435,7 +431,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 119}, {238, 15}}</string>
 									<reference key="NSSuperview" ref="595383528"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="214051233"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -447,7 +442,6 @@
 							</array>
 							<string key="NSFrame">{{20, 20}, {150, 335}}</string>
 							<reference key="NSSuperview" ref="914934427"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="485556613"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -472,7 +466,6 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{466, 317}</string>
 											<reference key="NSSuperview" ref="416967183"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="395056104"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -483,7 +476,6 @@
 												<int key="NSvFlags">256</int>
 												<string key="NSFrameSize">{466, 17}</string>
 												<reference key="NSSuperview" ref="980019924"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="416967183"/>
 												<string key="NSReuseIdentifierKey">_NS:16</string>
 												<reference key="NSTableView" ref="759651840"/>
@@ -701,7 +693,6 @@
 									</array>
 									<string key="NSFrame">{{1, 17}, {466, 317}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="759651840"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="759651840"/>
@@ -713,7 +704,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="460555406"/>
 									<string key="NSReuseIdentifierKey">_NS:58</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -727,7 +717,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 309}, {416, 16}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -744,7 +733,6 @@
 									</array>
 									<string key="NSFrame">{{1, 0}, {466, 17}}</string>
 									<reference key="NSSuperview" ref="214051233"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="126944102"/>
 									<string key="NSReuseIdentifierKey">_NS:15</string>
 									<reference key="NSDocView" ref="126944102"/>
@@ -754,7 +742,6 @@
 							</array>
 							<string key="NSFrame">{{178, 20}, {468, 335}}</string>
 							<reference key="NSSuperview" ref="914934427"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="980019924"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -770,7 +757,6 @@
 					</array>
 					<string key="NSFrameSize">{666, 375}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="595383528"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1418}}</string>
@@ -793,20 +779,41 @@
 			<object class="NSCustomObject" id="358484641">
 				<string key="NSClassName">MTBookmarkWindowController</string>
 			</object>
-			<object class="NSMenu" id="742251781">
+			<object class="NSMenu" id="736630851">
 				<string key="NSTitle"/>
 				<array class="NSMutableArray" key="NSMenuItems">
-					<object class="NSMenuItem" id="95131031">
-						<reference key="NSMenu" ref="742251781"/>
+					<object class="NSMenuItem" id="147926189">
+						<reference key="NSMenu" ref="736630851"/>
 						<string key="NSTitle">Edit...</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="243984851"/>
 						<reference key="NSMixedImage" ref="561618314"/>
 					</object>
-					<object class="NSMenuItem" id="343852245">
-						<reference key="NSMenu" ref="742251781"/>
+					<object class="NSMenuItem" id="970248624">
+						<reference key="NSMenu" ref="736630851"/>
 						<string key="NSTitle">Delete</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="243984851"/>
+						<reference key="NSMixedImage" ref="561618314"/>
+					</object>
+				</array>
+			</object>
+			<object class="NSMenu" id="713321487">
+				<string key="NSTitle"/>
+				<array class="NSMutableArray" key="NSMenuItems">
+					<object class="NSMenuItem" id="595219102">
+						<reference key="NSMenu" ref="713321487"/>
+						<string key="NSTitle">Play</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="243984851"/>
+						<reference key="NSMixedImage" ref="561618314"/>
+					</object>
+					<object class="NSMenuItem" id="405717128">
+						<reference key="NSMenu" ref="713321487"/>
+						<string key="NSTitle">Open Contact URL</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="243984851"/>
@@ -861,7 +868,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">editBookmark</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="95131031"/>
+						<reference key="destination" ref="147926189"/>
 					</object>
 					<int key="connectionID">218</int>
 				</object>
@@ -869,7 +876,7 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">editBookmark:</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="95131031"/>
+						<reference key="destination" ref="147926189"/>
 					</object>
 					<int key="connectionID">219</int>
 				</object>
@@ -877,7 +884,7 @@
 					<object class="IBActionConnection" key="connection">
 						<string key="label">deleteBookmark:</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="343852245"/>
+						<reference key="destination" ref="970248624"/>
 					</object>
 					<int key="connectionID">220</int>
 				</object>
@@ -885,7 +892,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">bookmarkMenu</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="742251781"/>
+						<reference key="destination" ref="736630851"/>
 					</object>
 					<int key="connectionID">221</int>
 				</object>
@@ -896,6 +903,22 @@
 						<reference key="destination" ref="358484641"/>
 					</object>
 					<int key="connectionID">223</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">play:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="595219102"/>
+					</object>
+					<int key="connectionID">229</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openContactUrl:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="405717128"/>
+					</object>
+					<int key="connectionID">231</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -917,7 +940,7 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">menu</string>
 						<reference key="source" ref="682978220"/>
-						<reference key="destination" ref="742251781"/>
+						<reference key="destination" ref="736630851"/>
 					</object>
 					<int key="connectionID">222</int>
 				</object>
@@ -1044,6 +1067,14 @@
 						<reference key="destination" ref="122646580"/>
 					</object>
 					<int key="connectionID">54</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">menu</string>
+						<reference key="source" ref="759651840"/>
+						<reference key="destination" ref="713321487"/>
+					</object>
+					<int key="connectionID">228</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -1943,22 +1974,41 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">212</int>
-						<reference key="object" ref="742251781"/>
+						<reference key="object" ref="736630851"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="95131031"/>
-							<reference ref="343852245"/>
+							<reference ref="147926189"/>
+							<reference ref="970248624"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">213</int>
-						<reference key="object" ref="95131031"/>
-						<reference key="parent" ref="742251781"/>
+						<reference key="object" ref="147926189"/>
+						<reference key="parent" ref="736630851"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">214</int>
-						<reference key="object" ref="343852245"/>
-						<reference key="parent" ref="742251781"/>
+						<reference key="object" ref="970248624"/>
+						<reference key="parent" ref="736630851"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">224</int>
+						<reference key="object" ref="713321487"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="595219102"/>
+							<reference ref="405717128"/>
+						</array>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">225</int>
+						<reference key="object" ref="595219102"/>
+						<reference key="parent" ref="713321487"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">226</int>
+						<reference key="object" ref="405717128"/>
+						<reference key="parent" ref="713321487"/>
 					</object>
 				</array>
 			</object>
@@ -2011,6 +2061,9 @@
 				</array>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="22.userInterfaceItemIdentifier">DataCell</string>
+				<string key="224.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="225.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="226.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array key="23.IBNSViewMetadataConstraints">
 					<reference ref="990212779"/>
 					<reference ref="951867844"/>
@@ -2080,114 +2133,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">223</int>
+			<int key="maxID">231</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MTBookmarkWindowController</string>
-					<string key="superclassName">NSWindowController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="addBookmark:">id</string>
-						<string key="cancel:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="addBookmark:">
-							<string key="name">addBookmark:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="cancel:">
-							<string key="name">cancel:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MTBookmarkWindowController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MTMainWindowController</string>
-					<string key="superclassName">NSWindowController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="deleteBookmark:">id</string>
-						<string key="editBookmark:">id</string>
-						<string key="reload:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="deleteBookmark:">
-							<string key="name">deleteBookmark:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="editBookmark:">
-							<string key="name">editBookmark:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="reload:">
-							<string key="name">reload:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bookmarkMenu">NSMenu</string>
-						<string key="bookmarkOutlineView">MTOutlineView</string>
-						<string key="bookmarkWindowController">MTBookmarkWindowController</string>
-						<string key="channelArrayController">NSArrayController</string>
-						<string key="channelTableView">NSTableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bookmarkMenu">
-							<string key="name">bookmarkMenu</string>
-							<string key="candidateClassName">NSMenu</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bookmarkOutlineView">
-							<string key="name">bookmarkOutlineView</string>
-							<string key="candidateClassName">MTOutlineView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bookmarkWindowController">
-							<string key="name">bookmarkWindowController</string>
-							<string key="candidateClassName">MTBookmarkWindowController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="channelArrayController">
-							<string key="name">channelArrayController</string>
-							<string key="candidateClassName">NSArrayController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="channelTableView">
-							<string key="name">channelTableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MTMainWindowController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MTOutlineView</string>
-					<string key="superclassName">NSOutlineView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MTOutlineView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MTTimeIntervalFormatter</string>
-					<string key="superclassName">NSFormatter</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MTTimeIntervalFormatter.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
