メインリストの縦サイズを調整。READMEを更新。

--- a/Indexing/MTMainWindowController.xib
+++ b/Indexing/MTMainWindowController.xib
@@ -291,12 +291,12 @@
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
-						<object class="NSSplitView" id="439748435">
+						<object class="NSSplitView" id="916093858">
 							<reference key="NSNextResponder" ref="914934427"/>
 							<int key="NSvFlags">268</int>
 							<array class="NSMutableArray" key="NSSubviews">
 								<object class="NSScrollView" id="595383528">
-									<reference key="NSNextResponder" ref="439748435"/>
+									<reference key="NSNextResponder" ref="916093858"/>
 									<int key="NSvFlags">268</int>
 									<array class="NSMutableArray" key="NSSubviews">
 										<object class="NSClipView" id="485556613">
@@ -448,7 +448,7 @@
 										</object>
 									</array>
 									<string key="NSFrameSize">{173, 355}</string>
-									<reference key="NSSuperview" ref="439748435"/>
+									<reference key="NSSuperview" ref="916093858"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="485556613"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -462,7 +462,7 @@
 									<double key="NSMagnification">1</double>
 								</object>
 								<object class="NSScrollView" id="214051233">
-									<reference key="NSNextResponder" ref="439748435"/>
+									<reference key="NSNextResponder" ref="916093858"/>
 									<int key="NSvFlags">268</int>
 									<array class="NSMutableArray" key="NSSubviews">
 										<object class="NSClipView" id="416967183">
@@ -689,7 +689,7 @@
 														<reference key="NSColor" ref="612136347"/>
 													</object>
 													<reference key="NSGridColor" ref="956703074"/>
-													<double key="NSRowHeight">24</double>
+													<double key="NSRowHeight">16</double>
 													<int key="NSTvFlags">-675282944</int>
 													<reference key="NSDelegate"/>
 													<reference key="NSDataSource"/>
@@ -731,7 +731,6 @@
 											<string key="NSFrame">{{1, 222}, {242, 16}}</string>
 											<reference key="NSSuperview" ref="214051233"/>
 											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
 											<string key="NSReuseIdentifierKey">_NS:60</string>
 											<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 											<int key="NSsFlags">1</int>
@@ -756,7 +755,7 @@
 										</object>
 									</array>
 									<string key="NSFrame">{{174, 0}, {492, 355}}</string>
-									<reference key="NSSuperview" ref="439748435"/>
+									<reference key="NSSuperview" ref="916093858"/>
 									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="980019924"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -765,7 +764,7 @@
 									<reference key="NSHScroller" ref="460555406"/>
 									<reference key="NSContentView" ref="416967183"/>
 									<reference key="NSHeaderClipView" ref="980019924"/>
-									<bytes key="NSScrollAmts">QSAAAEEgAABBgAAAQYAAAA</bytes>
+									<bytes key="NSScrollAmts">QSAAAEEgAABBkAAAQZAAAA</bytes>
 									<double key="NSMinMagnification">0.25</double>
 									<double key="NSMaxMagnification">4</double>
 									<double key="NSMagnification">1</double>
@@ -794,7 +793,7 @@
 					<string key="NSFrameSize">{666, 375}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
-					<reference key="NSNextKeyView" ref="439748435"/>
+					<reference key="NSNextKeyView" ref="916093858"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {2560, 1418}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
@@ -1349,7 +1348,7 @@
 								<reference key="firstItem" ref="914934427"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="439748435"/>
+								<reference key="secondItem" ref="916093858"/>
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBNSLayoutSymbolicConstant" key="constant">
@@ -1361,8 +1360,8 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="18450685">
-								<reference key="firstItem" ref="439748435"/>
+							<object class="IBNSLayoutConstraint" id="613179548">
+								<reference key="firstItem" ref="916093858"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="914934427"/>
@@ -1377,8 +1376,8 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="442951483">
-								<reference key="firstItem" ref="439748435"/>
+							<object class="IBNSLayoutConstraint" id="490858124">
+								<reference key="firstItem" ref="916093858"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="914934427"/>
@@ -1393,8 +1392,8 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="816639798">
-								<reference key="firstItem" ref="439748435"/>
+							<object class="IBNSLayoutConstraint" id="870283573">
+								<reference key="firstItem" ref="916093858"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
 								<reference key="secondItem" ref="914934427"/>
@@ -1409,7 +1408,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<reference ref="439748435"/>
+							<reference ref="916093858"/>
 						</array>
 						<reference key="parent" ref="862213543"/>
 					</object>
@@ -1510,7 +1509,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">238</int>
-						<reference key="object" ref="439748435"/>
+						<reference key="object" ref="916093858"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="214051233"/>
 							<reference ref="595383528"/>
@@ -1519,12 +1518,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">242</int>
-						<reference key="object" ref="816639798"/>
+						<reference key="object" ref="870283573"/>
 						<reference key="parent" ref="914934427"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">245</int>
-						<reference key="object" ref="442951483"/>
+						<reference key="object" ref="490858124"/>
 						<reference key="parent" ref="914934427"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1534,7 +1533,7 @@
 							<reference ref="682978220"/>
 							<reference ref="966985489"/>
 							<reference ref="431032607"/>
-							<object class="IBNSLayoutConstraint" id="193309575">
+							<object class="IBNSLayoutConstraint" id="600361607">
 								<reference key="firstItem" ref="595383528"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">1</int>
@@ -1551,7 +1550,7 @@
 								<int key="contentType">1</int>
 							</object>
 						</array>
-						<reference key="parent" ref="439748435"/>
+						<reference key="parent" ref="916093858"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
@@ -1831,7 +1830,7 @@
 							<reference ref="126944102"/>
 							<reference ref="395056104"/>
 						</array>
-						<reference key="parent" ref="439748435"/>
+						<reference key="parent" ref="916093858"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">44</int>
@@ -1954,7 +1953,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">252</int>
-						<reference key="object" ref="18450685"/>
+						<reference key="object" ref="613179548"/>
 						<reference key="parent" ref="914934427"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -1989,7 +1988,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">262</int>
-						<reference key="object" ref="193309575"/>
+						<reference key="object" ref="600361607"/>
 						<reference key="parent" ref="595383528"/>
 					</object>
 				</array>
@@ -2095,16 +2094,16 @@
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array class="NSMutableArray" key="7.IBNSViewMetadataConstraints">
-					<reference ref="816639798"/>
-					<reference ref="442951483"/>
-					<reference ref="18450685"/>
+					<reference ref="870283573"/>
+					<reference ref="490858124"/>
+					<reference ref="613179548"/>
 					<reference ref="776162545"/>
 				</array>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="79.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<array key="9.IBNSViewMetadataConstraints">
-					<reference ref="193309575"/>
+					<reference ref="600361607"/>
 				</array>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
